cmake_minimum_required(VERSION 3.14)
project(Week5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week5 main.cpp peak_finder.cpp get_fibonacci_last_digit_naive.cpp gcd_naive.cpp lcm.cpp edit-distance-naive.cpp get-change.cpp edit-distance.cpp airport.cpp length_error.cpp length_error.h single-list.cpp)