cmake_minimum_required(VERSION 3.14)
project(Week5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week5 main.cpp peak_finder.cpp get_fibonacci_last_digit_naive.cpp gcd_naive.cpp lcm.cpp edit-distance-naive.cpp get-change.cpp edit-distance.cpp airport.cpp length_error.cpp length_error.h single-list.cpp stack.cpp practise.cpp host.cpp getline.cpp pointers.cpp tree.cpp DataStructures/check_brackets.cpp DataStructures/tree-height.cpp DataStructures/process-packages.cpp techiedelight/find-pair-with-given-sum-array.cpp techiedelight/sort-binary-array-linear-time.cpp techiedelight/in-place-merge-two-sorted-arrays.cpp techiedelight/group-elements-array-based-first-occurrence.cpp)